Pull and overflow fix

--- a/style.css
+++ b/style.css
@@ -1,22 +1,14 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: black;
+  background: black;
+  overflow: hidden;
 }
 
 canvas {
-    display: block;
+  display: block;
 }
 
-#color {
-    color: #BBB;
-    font-family: helvetica, arial, sans-serif;
-    font-size: 1.2em;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 1000;
-}
